--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -30,7 +30,7 @@
         <a class="nav-link dropdown-toggle <%=(url.toLowerCase().includes('/payroll'))?'active':''%>" href="/admin/payroll" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage Payroll</a>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
           <a class="dropdown-item" href="/admin/payroll">All Payroll</a>
-          <a class="dropdown-item" href="#">Payroll History</a>
+          <a class="dropdown-item" href="/admin/payroll/types">Payroll Groups</a>
         </div>
       </li>
       <!-- <li class="nav-item">
