payroll-group lists edit and delete button is now working.

--- a/views/addEmployee.ejs
+++ b/views/addEmployee.ejs
@@ -1,10 +1,10 @@
 <%-include('partials/Header')%>
 <link rel="stylesheet" href="/styles/dataTable.css">
 <link rel="stylesheet" href="/styles/newEmployee.css">
-<main class="d-flex flex-nowrap" style=" height: 100vh; overflow: auto; align-self: center;">
+<main class="d-flex flex-nowrap" style=" align-self: center;">
 
     <%-include('partials/Aside')%> 
-<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em">
+<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
     <div class="d-flex justify-content-between"> 
             <div class="d-flex justify-content-center align-items-center rounded-1"> 
               <a href="#" class="nav-link" style="padding-right: 10px !important;">
