--- a/views/editEmployee.ejs
+++ b/views/editEmployee.ejs
@@ -97,7 +97,7 @@
 
                         <div class="inputDiv1__input">
                             <label for="mobile"> Mobile Number</label>
-                            <input type="number" step="any" name="contact_personal" placeholder="Mobile Number" value="<%=data.result.personal_information.contact_peersonal%>">
+                            <input type="number" step="any" name="contact_personal" placeholder="Mobile Number" value="<%=data.result.personal_information.contact_personal%>">
                         </div>
                     </div>
                     <div class="cardForm__inputDiv d-flex">
