--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -4,10 +4,10 @@
     
 </style>
 
-<main class="d-flex flex-nowrap" style=" height: 100vh; overflow: hidden; align-self: center;">
+<main class="d-flex flex-nowrap" style="align-self: center; ">
 
 <%-include('partials/Aside')%> 
-<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em">
+<div class="d-flex flex-column flex-fill" style=" border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
     <div class="d-flex justify-content-between"> 
             <div class="d-flex justify-content-center align-items-center rounded-1"> 
               <a href="#" class="nav-link" style="padding-right: 10px !important;">
@@ -29,7 +29,7 @@
                   </div>
             </div>
     </div>
-    <div class="d-flex gap-4" style="padding-top: 25px !important;"> 
+    <div class="d-flex gap-4"> 
         <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
              <div class="d-flex flex-column justify-content-around">
                 <p>Employees</p>
@@ -99,7 +99,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
-    <div class="d-flex overflow-auto  table-container" style="margin-top: 25px !important; min-width:1200px;"> 
+    <div class="d-flex  table-container"> 
     
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
