--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -165,6 +165,14 @@ a.reject{
     color:#656488;
     font-size: .8rem;
 }
+.filterContainer select{
+    background-color: #FFFEFE;
+    border: 1px solid #dddddd;
+    padding: .5em .5em;
+    color:#656488;
+    font-size: .8rem;
+    width: 15%;
+}
 .statusContainer{
     display: flex;
     width: auto;
