--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -29,7 +29,7 @@
     
     <div class="d-flex filterContainer rounded-1 gap-3 justify-content-center">
         <a id="btnAdd" href="/admin/employees/new" class="btn btn-primary">Add New Employee</a>
-        <a id='btnAdd_payrollType' class="btn btn-primary" href="#" data-toggle="modal" data-target="#modal" onclick="addPayrollTypeModal('','','payroll_types', `<%=include('partials/bodies/payrollTypes-editbody', {payroll_type: payrollTypes, employees: data})%>`)"> Add Payroll Type </a>
+        <a id='btnAdd_payrollType' class="btn btn-primary" href="#" data-toggle="modal" data-target="#modal" onclick="addPayrollTypeModal('','','payroll_types', `<%=include('partials/bodies/payrollTypes-editbody', {payroll_type: group, employees: data})%>`)"> Add Payroll Type </a>
     </div>
     <%-include('partials/Modal') %> 
     
@@ -50,7 +50,7 @@
                 <tr>
                     <th>Employee ID</th>
                     <th>Employee</th>
-                    <th>Payroll Type</th>
+                    <th>Payroll Group</th>
                     <th>Designation</th>
                     <th>Type</th>
                     <th>Action</th>
@@ -65,7 +65,8 @@
                             <%if(user.employee_details.employment_information.payroll_type === null){%>
                                 <a href="#"> Add </a>
                             <%}else{%>
-                                <%=user.employee_details.employment_information.payroll_type.fund_cluster%> 
+                                <%=user.employee_details.employment_information.payroll_type.fund_cluster%>
+                                - <%=user.employee_details.employment_information.payroll_type.project_name%> <%=(user.employee_details.employment_information.payroll_type.program_name) ? +  '/ ' + user.employee_details.employment_information.payroll_type.program_name : ''%> 
                                 <a href="#"> Edit </a>
                             <%}%>    
                         </td>
