--- a/views/addPayrollType.ejs
+++ b/views/addPayrollType.ejs
@@ -5,7 +5,7 @@
     .form-control, .btn {font-size: 14px; border-left: 0px; border-right: 0px;}
 </style>
     <%-include('partials/Aside')%> 
-<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em">
+<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
     <div class="d-flex justify-content-between"> 
             <div class="d-flex justify-content-center align-items-center rounded-1"> 
               <a href="#" class="nav-link" style="padding-right: 10px !important;">
@@ -53,9 +53,9 @@
 
     <!-- modal -->
     <%-include('partials/Modal') %> 
-    <div class="d-flex overflow-auto gap-4 justify-content-between" style="margin-top: 25px !important; min-width:1200px">
+    <div class="d-flex overflow-auto gap-4 justify-content-between">
         
-        <div class="overflow-auto  table-container" style="width:100%;  "> 
+        <div class="d-flex  table-container"> 
             
            
             <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
@@ -108,7 +108,6 @@
         
     </div>
     
-</div>
 
 
 
