--- a/views/holidays.ejs
+++ b/views/holidays.ejs
@@ -28,7 +28,7 @@
             </div>
     </div>
 
-    <div class="d-flex gap-4 mr-4"> 
+    <div class="d-flex gap-4"> 
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Total Holidays</p>
