--- a/views/leaveTypes.ejs
+++ b/views/leaveTypes.ejs
@@ -1,11 +1,11 @@
 <%-include('partials/Header')%>
 <link rel="stylesheet" href="/styles/dataTable.css">
-<main class="d-flex flex-nowrap" style=" height: 100vh; align-self: center;">
+<main class="d-flex flex-nowrap" style="align-self: center;">
 <style>
     .form-control, .btn {font-size: 14px; border-left: 0px; border-right: 0px;}
 </style>
     <%-include('partials/Aside')%> 
-<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em">
+<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
     <div class="d-flex justify-content-between"> 
             <div class="d-flex justify-content-center align-items-center rounded-1"> 
               <a href="#" class="nav-link" style="padding-right: 10px !important;">
@@ -28,7 +28,7 @@
             </div>
     </div>
 
-    <div class="d-flex gap-4 mr-4" style="padding-top: 25px !important;"> 
+    <div class="d-flex gap-4 mr-4"> 
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Total Leave</p>
@@ -53,7 +53,7 @@
 
     <!-- modal -->
     <%-include('partials/Modal') %> 
-    <div class="d-flex overflow-auto gap-4 justify-content-between" style="margin-top: 25px !important; min-width:1200px">
+    <div class="d-flex overflow-auto gap-4 justify-content-between" >
 
         <div class="overflow-auto  table-container" style="width:100%;  "> 
         
