--- a/views/travelPass.ejs
+++ b/views/travelPass.ejs
@@ -3,10 +3,10 @@
 <style>
     .form-control, .btn {font-size: 14px; border-left: 0px; border-right: 0px;}
 </style>
-<main class="d-flex flex-nowrap" style=" height: 100vh; overflow: hidden; align-self: center;">
+<main class="d-flex flex-nowrap" style=" align-self: center;">
 
     <%-include('partials/Aside')%> 
-<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em">
+<div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em; gap:1.5em; overflow: auto;">
     <div class="d-flex justify-content-between"> 
             <div class="d-flex justify-content-center align-items-center rounded-1"> 
               <a href="#" class="nav-link" style="padding-right: 10px !important;">
@@ -29,7 +29,7 @@
             </div>
     </div>
 
-    <div class="d-flex gap-4" style="padding-top: 25px !important;"> 
+    <div class="d-flex gap-4"> 
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Passes</p>
@@ -52,7 +52,7 @@
       </div>
     </div>
     <%-include('partials/Modal') %> 
-    <div id='dataTableParent'class="d-flex overflow-auto gap-4 justify-content-between" style="margin-top: 25px !important; min-width:1200px">
+    <div id='dataTableParent'class="d-flex overflow-auto gap-4 justify-content-between">
 
         <div class="overflow-auto  table-container" style="width:100%;  "> 
         
@@ -158,7 +158,7 @@
         }
         if(id){
             if(!isNaN(id)){
-                const result = await fetch(`http://localhost:3000/admin/api/employees/${id}`)
+                const result = await fetch(`/admin/api/employees/${id}`)
                 const data = await result.json()
                 console.log(data.result)
                 if(data){
@@ -185,7 +185,7 @@
                 project: form.project.value
             }
             console.log('client 1:', doc)
-            const res = await fetch('http://localhost:3000/admin/api/events/travelpass',{
+            const res = await fetch('/admin/api/events/travelpass',{
                 headers:{'Content-Type': 'application/json'},
                 body: JSON.stringify(doc),
                 method: 'POST'
