--- a/views/payrollDetails.ejs
+++ b/views/payrollDetails.ejs
@@ -100,37 +100,10 @@
               <%}); %>
               
             </select>
-            <a id='btnCreate_PayrollHistory' class="btn btn-primary" href="#" ==> Create Payroll </a>
-            <script>
-              const createPayroll = document.querySelector('#btnCreate_PayrollHistory');
-              //get input date from and to
-              const projectSelect = document.querySelector('#projectSelect');
-
-              const gFrom = document.querySelector('input[type="date"]#from');
-              const gTo = document.querySelector('input[type="date"]#to');
-              //get all the values
-              
-              
-              createPayroll.addEventListener('click', async (e) => {
-                e.preventDefault();
-                const values = {
-                  from: gFrom.value,
-                  to: gTo.value,
-                  project: projectSelect.value
-                }
-                const data = await fetch('/admin/api/payrolls/history', {
-                  method: 'POST',
-                  headers: {
-                    'Content-Type': 'application/json'
-                  },
-                  body: JSON.stringify(values)
-                })
-
-                const result = await data.json()
-                console.log(result)
-              });
-            </script>
             
+            </script>
+            <a id='btnAdd_payrollType' class="btn btn-primary" href="#" data-toggle="modal" data-target="#modal" onclick="submitModal('','','fund_cluster project_name program_name monthly_rate no_of_days gross_amount_due tax contributions net_amount_due', `<%=include('partials/bodies/payrollHistory-editBody', {data, selectedGroup})%>`)"> Add Payroll Type </a>
+            <a id='btnCreate_PayrollHistory' data-toggle="modal" data-target="#modal" href="#" class="btn btn-primary">Create Payroll</a>
         </form>
     </div>
 
@@ -139,25 +112,26 @@
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
                 <tr>
-                    <th>Payroll Date</th>
-                    <th>No. of Employees</th>
-                    <th>Fund Cluster</th>
-                    <th>Project Name</th>
-                    <th>Program Name</th>
+                    <th>Employee ID</th>
+                    <th>Employee</th>
+                    <th>Payroll Group</th>
+                    <th>Gross Amount Earned</th>
+                    <th>Net Amount Due</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
               <%if(data.result){%>
-                <% Object.values(data.result).forEach(group =>{%> 
+                <% Object.values(data.result).forEach(user =>{%> 
                   <tr>
-                      <td><%=moment(group.date_from).format('MMMM')%> <%=moment(new Date(group.date_from)).local().date()%>-<%=(moment(group.date_to).format('MMMM') === moment(group.date_from).format('MMMM')) ? moment(new Date(group.date_to)).local().date() : moment(group.date_to).format('MMMM') + " " +  moment(new Date(group.date_to).local()).date()%> <%=moment(group.date_to).year()%></td>
-                      <td><%=group.employees.length%></td>
-                      <td><%=group.payroll_group.fund_cluster%></td>
-                      <td><%=group.payroll_group.project_name%></td>
-                      <td><%=group.payroll_group.program_name%></td>
+                      <td><%=user.emp_code%></td>
+                      <td><%=user.name%></td>
+                      <td><%=user.payroll_group.fund_cluster%> - <%=user.payroll_group.project_name%> <%=(user.payroll_group.program_name) ? +  '/ ' + user.payroll_group.program_name : ''%></td>
+                      <td><%=user.salaries.gross_salary%></td>
+                      <td><%=user.salaries.net_salary%></td>
                       <td >
-                          <a href="/admin/payroll/history/receipt?id=<%=group._id%>">Payroll</a>
+                          <a href="/admin/payroll/<%=user.emp_code%>/payslip?from=<%=query.from%>&to=<%=query.to%>">Payslip</a>
+                          <a href="/admin/payroll/receipt?from=<%=query.from%>&to=<%=query.to%>&p_group=<%=user.payroll_group._id%>">Payroll</a>
                       </td>
                   </tr>
                   <%}); %>
