fixed employee page

--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -157,7 +157,7 @@
                       <td><%=group.payroll_group.project_name%></td>
                       <td><%=group.payroll_group.program_name%></td>
                       <td >
-                          <a href="/admin/payroll/history/receipt?id=<%=group._id%>">Payroll</a>
+                          <a href="/admin/payroll/history/receipt?id=<%=group._id%>">Print</a>
                       </td>
                   </tr>
                   <%}); %>
